--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "jsqr": "1.1.1",
+    "moment": "^2.22.2",
     "qrcode.react": "0.8.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "tslib": "1.9.3"
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "@types/react": "16.4.8",
     "@types/react-dom": "16.0.7",
     "@types/webrtc": "0.0.23",
